# watch-diy

./: .gitattributes  .gitignore  README.md
.cursor/rules/: watch-diy-round-watchface-lvgl.mdc
docs/: 00-vision.md  01-requirements-functional.md  02-requirements-nonfunctional.md  03-hardware-design.md  04-firmware-architecture.md  05-cloud-and-app.md  06-project-checklist.md  07-development-roadmap.md  08-embedded-learning-plan.md
firmware/: CMakeLists.txt  README.md  partitions_watch.csv  sdkconfig  sdkconfig.defaults
firmware/components/esp_lcd_sh8601/: CMakeLists.txt
firmware/components/esp_lcd_sh8601/include/: esp_lcd_sh8601.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
firmware/main/app/: watch_app.c  watch_app.h
firmware/main/board/: bsp_board.h  bsp_lcd.c  bsp_lcd.h
firmware/main/services/: svc_batt.c  svc_batt.h  svc_display_idle.c  svc_display_idle.h  svc_rtc.c  svc_rtc.h  svc_system.c  svc_system.h  svc_timesync_wifi.c  svc_timesync_wifi.h
firmware/main/ui/: ui_demo.c  ui_demo.h
hardware/docs/: p0-log.md  power-model.md
server/: README.md  docker-compose.yml
server/caddy/: Caddyfile
server/certs-from-server/: ca.crt  server.crt  server.key
server/scripts/: gen-certs.sh
